--- a/OClusterMapView+Sample/OClusterMapView+Sample-Info.plist
+++ b/OClusterMapView+Sample/OClusterMapView+Sample-Info.plist
@@ -8,13 +8,10 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>ocmapview_logo.png</string>
-		<string>ocmapview_logo@2x.png</string>
-		<string>ocmapview_logo~ipad.png</string>
+		<string>ocmapview_logo</string>
+		<string>ocmapview_logo~ipad</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com..${PRODUCT_NAME:rfc1034identifier}</string>
@@ -26,16 +23,10 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
-	<key>NSMainNibFile~ipad</key>
-	<string>MainWindow-iPad</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
