--- a/OClusterMapView+Sample/OClusterMapView+Sample-Info.plist
+++ b/OClusterMapView+Sample/OClusterMapView+Sample-Info.plist
@@ -40,5 +40,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
